# bu_uc

./: .gitignore  CMakeLists.txt  README.md  a.out  compile.bat  compile.sh
examples/: ex1.c
include/benutils/: unicode.h
src/: unicode.c
